fix(is_auth): was fixed jwt auth and refactored components
was fixed jwt auth and refactored components
