# src/controllers/comment_controller.ts
@@ -45,7 +45,7 @@ export async function addLike(req: Request, res: Response): Promise<Response> {
 export async function deleteById(req: Request, res: Response): Promise<Response> {
     const user = await isAdmin(req.body.user_id);
     const comment = await CommentService.findOne(Number(req.body.id));
-    if (user || Number(comment.author_id) === req.body.user_id) {
+    if (user || Number(comment.user_id) === req.body.user_id) {
         await CommentService.deleteById(+req.body.id);
         return res.status(200).json({
             message: 'comment deleted successfully',
