# src/validations/post_validation.ts
@@ -4,7 +4,7 @@ import validateData from '../middleware/is_valid';
 const sortPostValidation = [body('parametr').isString().isLength({ min: 3, max: 4 }), validateData];
 const sortByLikesValidation = [body('parametr').isString().isLength({ min: 3, max: 4 }), validateData];
 const createPostValidation = [
-    body('author_id').isNumeric(),
+    body('user_id').isNumeric(),
     body('author_name').isString().isLength({ min: 2, max: 35 }).trim(),
     body('title').isString().isLength({ min: 1, max: 100 }).trim(),
     body('body').isString().isLength({ min: 1, max: 10000 }).trim(),
@@ -16,7 +16,7 @@ const getOnePostValidation = [query('id').isNumeric().trim()];
 
 const updatePostValidation = [
     body('id').isNumeric(),
-    body('author_id').isNumeric(),
+    body('user_id').isNumeric(),
     body('title').isString().isLength({ min: 1, max: 100 }).trim(),
     body('body').isString().isLength({ min: 1, max: 10000 }).trim(),
     validateData,
