# swagger.yaml
@@ -409,7 +409,7 @@ definitions:
       id:
         type: "integer"
         format: "int64"
-      author_id:
+      user_id:
         type: "integer"
         format: "int64"
       author_name:
@@ -433,7 +433,7 @@ definitions:
     required: 
       - "title"
       - "body"
-      - "author_id"
+      - "user_id"
       - "author_name"
       - "accessToken"
     properties:
@@ -441,7 +441,7 @@ definitions:
         type: "string"
       body: 
         type: "string"
-      author_id: 
+      user_id: 
         type: "integer"
         format: "int64"
       author_name: 
@@ -456,7 +456,7 @@ definitions:
       - "title"
       - "body"
       - "id"
-      - "author_id"
+      - "user_id"
       - "accessToken"
     properties:
       title:
@@ -466,7 +466,7 @@ definitions:
       id:
         type: "integer"
         format: "int64"
-      author_id:
+      user_id:
         type: "integer"
         format: "int64"
       accessToken:
@@ -574,14 +574,14 @@ definitions:
   Comment:
     type: "object"
     required:
-    - "author_id"
+    - "user_id"
     - "body"
     - "post_id"
     properties:
       id:
         type: "integer"
         format: "int64"
-      author_id:
+      user_id:
         type: "integer"
         format: "int64"
       body:
@@ -601,7 +601,7 @@ definitions:
     required: 
       - "post_id"
       - "body"
-      - "author_id"
+      - "user_id"
       - "accessToken"
     properties: 
       post_id:
@@ -609,7 +609,7 @@ definitions:
         format: "int64"
       body: 
         type: "string"
-      author_id:
+      user_id:
         type: "integer"
         format: "int64"
       accessToken:
